--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "lodash": "^4.17.11",
     "mdbreact": "^4.8.1",
     "mysql2": "^1.6.1",
+    "qrcode": "^1.3.3",
     "querystring": "^0.2.0",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
     "react-dom": "^16.5.2",
     "react-masonry-component": "^6.2.1",
+    "react-qr-svg": "^2.2.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
