--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "classnames": "^2.2.6",
     "date-fns": "^1.29.0",
     "express": "^4.16.4",
+    "express-session": "^1.16.1",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
     "mdbreact": "^4.8.1",
     "mysql2": "^1.6.1",
+    "passport": "^0.4.0",
     "qrcode": "^1.3.3",
     "querystring": "^0.2.0",
     "react": "^16.5.2",
